# multimerge

./: README.md  multimergemodule.c  pyproject.toml  setup.py
.github/workflows/: build_and_upload.yml  ci.yml
test/: compares.py  test_multimerge.py
tests/: test_multimerge.py
